syntax = "proto3";

package grpc.experimental.browser_compat;

option go_package = "grpc_browser_compat";

// BrowserTerminator is the last message in a DATA stream of HTTP2, or the last chunk of the HTTP1.1 response.
// It's because browsers cannot access the trailing headers of a response, and as such it is crucial to add gRPC
// status information at the end of the data stream.
// The last chunk is prefixed with [0xDEADE0][4 bytes length of BrowserTerminator] and the Browser terminator proto.
message BrowserTerminator {
  int32 status_code = 1;   // grpc status code, 0 = OK etc.
  string status_desc = 2;   // optional description of the error

  message TrailingHeader {
    string name = 1;
    string value = 2;
  }

  repeated TrailingHeader trailer = 3;
}